Finished initial version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,11 @@ authors = [
 dependencies = [
     "beautifulsoup4>=4.12.3",
     "unearth>=0.16.1",
+    "setuptools>=69.0.0",
+    "pybind11>=2.13.1",
     "rich>=13.7.1",
     "resolvelib>=1.0.1",
     "packaging>=24.1",
-    "aiohttp>=3.9.5",
 ]
 requires-python = "<3.13,>=3.12"
 license = {text = "MIT"}
