--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,13 @@ authors = [
     {name = "Daniel Pfrommer", email = "dan.pfrommer@gmail.com"},
 ]
 dependencies = [
-    "beautifulsoup4>=4.12.3",
     "unearth>=0.16.1",
     "setuptools>=69.0.0",
     "pybind11>=2.13.1",
     "rich>=13.7.1",
     "resolvelib>=1.0.1",
     "packaging>=24.1",
+    "requests>=2.28.2",
 ]
 requires-python = "<3.13,>=3.12"
 license = {text = "MIT"}
