--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "resolvelib>=1.0.1",
     "packaging>=24.1",
     "requests>=2.28.2",
+    "pip>=24.0",
+    "setuptools_scm>=8.1.0"
 ]
 requires-python = "<3.13,>=3.12"
 license = {text = "MIT"}
