--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "packaging>=24.1",
     "requests>=2.28.2",
     "pip>=24.0",
+    "scikit-build>=0.18.0",
+    "meson-python>=0.16.0",
     "setuptools_scm>=8.1.0"
 ]
 requires-python = "<3.13,>=3.12"
