--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,16 +7,11 @@ authors = [
 ]
 dependencies = [
     "unearth>=0.16.1",
-    "setuptools>=69.0.0",
-    "pybind11>=2.13.1",
     "rich>=13.7.1",
     "resolvelib>=1.0.1",
     "packaging>=24.1",
     "requests>=2.28.2",
-    "pip>=24.0",
-    "scikit-build>=0.18.0",
-    "meson-python>=0.16.0",
-    "setuptools_scm>=8.1.0"
+    "build>=1.2.1"
 ]
 requires-python = "<3.13,>=3.12"
 license = {text = "MIT"}
@@ -27,3 +22,7 @@ nixpy = "nixpy:main"
 [build-system]
 requires = ["setuptools >= 61.0"]
 build-backend = "setuptools.build_meta"
+
+[tool.nixpy]
+python-version = "3.12"
+platforms = ["x86_64-linux", "aarch64-darwin"]
